--- a/MythicalCanines/Views/Home/Pet.cshtml
+++ b/MythicalCanines/Views/Home/Pet.cshtml
@@ -4,16 +4,57 @@
 
 <img class="d-block w-25" src="~/Content/Petstag.png" alt="" />
 
-    <center>
-        <img class="d-block w-50" src="~/Content/pet.png" alt="" />
-    
+<center>
+    <img class="d-block w-50" src="~/Content/pet.png" alt="" />
 
     <p>
         Pet's are your companions that fight along side with you.<br />
     </p>
+</center>
 
-     -Insert petting pet image here, maybe another carosel with feeding grooming and playing-
-
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <center>
+                    <img class="d-block w-75" src="~/Content/classestransp.png" alt="">
+                </center>
+                
+                <h3>A K9 taking care of a pet.</h3>
+                
+            </div>
+            <div class="carousel-item">
+                <center>
+                    <img class="d-block w-75" src="~/Content/capm.png" alt="Second slide">
+                </center>
+                
+                <h3>A K9 feeding their pet.</h3>
+                
+            </div>
+            <div class="carousel-item">
+                <center>
+                    <img class="d-block w-75" src="~/Content/upgrade.png" alt="Third slide">
+                </center>
+                
+                <h3>K9 petting the pet</h3>
+                
+            </div>
+        </div>
+        <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carouselExampleIndicators" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+<br /> <br />
+<center>
     <p>
         Pet's can be groomed, fed and played with to raise friendship level.<br />
         When you raise friendship level your pet slowly grows attached to you giving you bonus combat buffs!<br />
@@ -25,8 +66,8 @@
         The more friendship K9's have with their pets the more combat buffs K9's can get from their pets.<br />
         K9's can get a great boost from it.<br />
         For example: If the player has a sheep, the sheep gives immune to slow and 5% attack boost.<br />
-        But if you raise it's friendship level to max, the sheep wil give immune to slow, 
+        But if you raise it's friendship level to max, the sheep wil give immune to slow,
         15% attack boost and healing increased by 10% if the player uses a healing item.<br />
     </p>
 
-    </center>
+</center>
