--- a/MythicalCanines/Views/Home/Privacy.cshtml
+++ b/MythicalCanines/Views/Home/Privacy.cshtml
@@ -3,6 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+<link rel="stylesheet" href="~/css/UpdateSheet.css">
+
 <head runat="server">
     <title>Mythical Canines</title>
     <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
