--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Update";
 }
 
+<link rel="stylesheet" href="~/css/UpdateSheet.css">
+
 <h1>Mythical Canines Developer Updates / News</h1>
 
 <ul class="nav nav-tabs">
@@ -141,11 +143,11 @@
     </div>
 </div>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 
