--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -95,9 +95,9 @@
     </div>
 
     <footer class="border-top footer text-muted text-center">
-        <div>
+        @*<div>
             <a asp-area="" asp-controller="Home" asp-action="Index"> News</a>
-        </div>
+        </div>*@
         <div class="container">
             &copy; 2019 - MythicalCanines - <a asp-area="" asp-controller="Home" asp-action="Update"> News</a> / <a asp-area="" asp-controller="Home" asp-action="Privacy"> Privacy </a>
         </div>
