--- a/MythicalCanines/wwwroot/css/IndexSheet.css
+++ b/MythicalCanines/wwwroot/css/IndexSheet.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Content/planet.jpg");
+    background-image: url("../Content/mainpage.png");
     background-repeat:no-repeat;
     background-size:cover;
 }
