--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
     @*<link rel="stylesheet" href="~/css/site.css">*@
 
-    @*<link rel="stylesheet" href="~/css/site.css">*@
+    <link rel="stylesheet" href="~/css/IndexSheet.css">
 
     @*<style>
         body{
