--- a/MythicalCanines/wwwroot/css/site.css
+++ b/MythicalCanines/wwwroot/css/site.css
@@ -2,6 +2,9 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 /*<style type="site.css">*/
+p {
+    color: #000000;
+} 
 
 @font-face {
     font-family: 'arcade';
