--- a/MythicalCanines/wwwroot/css/UpdateSheet.css
+++ b/MythicalCanines/wwwroot/css/UpdateSheet.css
@@ -2,8 +2,9 @@
     background-image: url("../Content/background.png");
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 
-p {
+/*p {
     color: #000000;
-} 
+}*/ 
