--- a/MythicalCanines/wwwroot/css/PrivacySheet.css
+++ b/MythicalCanines/wwwroot/css/PrivacySheet.css
@@ -2,6 +2,7 @@
     background-image: url("../Content/privacy.png");
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 
 /*p {
