Lots of images, completed a lot of pages, text works, background works.

--- a/MythicalCanines/Views/Home/About.cshtml
+++ b/MythicalCanines/Views/Home/About.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "About";
 }
 
-<link rel="stylesheet" href="~/css/PrivacySheet.css">
+<link rel="stylesheet" href="~/css/UpdateSheet.css">
 
-<h1>About</h1>
+<h1 class="textfont">About<img class="img-fluid" src="~/Content/About.png" alt="" /></h1>
 
 <p>
     Mythical Canines is a RPG (Role Playing Game) about K9's with special classes who attack and defend from the Cattens who are trying to invade their land.
@@ -17,6 +17,41 @@
 <div class="text-center">
     <img class="img-fluid" src="~/Content/MK9Awaken.png" alt="" />
 </div>
+
+<p>
+    You the player get a chance to claim and choose one of the four classes available to you.<br />
+    Knight, Thief, Mage and Medic.<br />
+    The mysterious character would like to give you this offer as a welcoming gift to this world in exchange for helping K9's and stopping Cattens.<br />
+    You'll encounter a lot of interesting characters and Cattens along the way.<br />
+    For example, one of the Catten's you'll meet is Livid.<br />
+</p>
+
+<h2 class="textfont">Meet Livid</h2>
+
+
+@*<div class="text-center">*@
+<center>
+    <img class="d-block w-50" src="~/Content/livid.png" alt="" />
+@*</div>*@
+</center>
+
+<p>
+    Livid is one of your enemies who tries to figure out your weaknesses and he tries to make "test bosses" for you to beat and collect your weak points.<br />
+    But if one of his real creations goes wrong he might go into a temp!<br />
+    He too might try to battle you.<br />
+</p>
+
+<h2 class="textfont">Bosses</h2>
+
+<center>
+    <img class="d-block w-50" src="~/Content/boss.png" alt="" />
+    @*</div>*@
+</center>
+
+<p>
+    Bosses are everywhere ever since Cattens tries to take over, will you be the one who conquers all of the world bosses?<br />
+    Bosses also drop lots of loot and have a chance to drop that boss pet.
+</p>
 <br />
 <br />
 <br />
