--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     @*<body background="~/Content/planet.jpg"></body>*@
 
     <div class="text-center textfont">
-        <h1 class="display-4">Welcome to Mythical Canines!</h1>
+        <h1 class="display-4">Welcome to </h1> <img class="img-fluid" src="~/Content/MythicalCaninesLogo.png"/>
     </div>
 
     <div class="text-center textfont">
@@ -64,14 +64,14 @@
         </a>
     </div>
 
-    <div class="alert alert-dismissible alert-primary">
+    @*<div class="alert alert-dismissible alert-primary">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 30% done. </a>
     </div>
 
     <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
-    </div>
+    </div>*@
 
     <br />
 
