--- a/MythicalCanines/Views/Home/Pet.cshtml
+++ b/MythicalCanines/Views/Home/Pet.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Pet Page";
 }
 
+<link rel="stylesheet" href="~/css/PrivacySheet.css">
+
 <img class="d-block w-25" src="~/Content/Petstag.png" alt="" />
 
 <center>
@@ -21,15 +23,15 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <center>
-                    <img class="d-block w-75" src="~/Content/classestransp.png" alt="">
+                    <img class="d-block w-50" src="~/Content/petplay.png" alt="">
                 </center>
                 
-                <h3>A K9 taking care of a pet.</h3>
+                <h3>A K9 playing with their pet.</h3>
                 
             </div>
             <div class="carousel-item">
                 <center>
-                    <img class="d-block w-75" src="~/Content/capm.png" alt="Second slide">
+                    <img class="d-block w-50" src="~/Content/feed.png" alt="Second slide">
                 </center>
                 
                 <h3>A K9 feeding their pet.</h3>
@@ -37,10 +39,10 @@
             </div>
             <div class="carousel-item">
                 <center>
-                    <img class="d-block w-75" src="~/Content/upgrade.png" alt="Third slide">
+                    <img class="d-block w-50" src="~/Content/petting.png" alt="Third slide">
                 </center>
                 
-                <h3>K9 petting the pet</h3>
+                <h3>A K9 petting the pet</h3>
                 
             </div>
         </div>
@@ -54,20 +56,20 @@
         </a>
     </div>
 <br /> <br />
-<center>
-    <p>
-        Pet's can be groomed, fed and played with to raise friendship level.<br />
-        When you raise friendship level your pet slowly grows attached to you giving you bonus combat buffs!<br />
-    </p>
+       <center>
+           <p>
+               Pet's can be groomed, fed and played with to raise friendship level.<br />
+               When you raise friendship level your pet slowly grows attached to you giving you bonus combat buffs!<br />
+           </p>
 
-    -Insert friendship raise picture-
+           <img class="d-block w-50" src="~/Content/friendship.png" alt="" />
 
-    <p>
-        The more friendship K9's have with their pets the more combat buffs K9's can get from their pets.<br />
-        K9's can get a great boost from it.<br />
-        For example: If the player has a sheep, the sheep gives immune to slow and 5% attack boost.<br />
-        But if you raise it's friendship level to max, the sheep wil give immune to slow,
-        15% attack boost and healing increased by 10% if the player uses a healing item.<br />
-    </p>
+           <p>
+               The more friendship K9's have with their pets the more combat buffs K9's can get from their pets.<br />
+               K9's can get a great boost from it.<br />
+               For example: If the player has a sheep, the sheep gives immune to slow and 5% attack boost.<br />
+               But if you raise it's friendship level to max, the sheep wil give immune to slow,
+               15% attack boost and healing increased by 10% if the player uses a healing item.<br />
+           </p>
 
-</center>
+       </center>
