--- a/MythicalCanines/Views/Home/Privacy.cshtml
+++ b/MythicalCanines/Views/Home/Privacy.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacy Policy"; 
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="textfont">
+    @ViewData["Title"] <img class="img-fluid" src="~/Content/privatepolicy.png" alt="" />
+</h1>
 
 <link rel="stylesheet" href="~/css/UpdateSheet.css">
 
@@ -15,7 +17,7 @@
     Our Policy is created to help you understand what kind of data we will collect and how we use and share information and how the data it is protected.</p>
 
 <div>
-    <h1>1.) What types of data we collect</h1>
+    <h1 class="textfont">1.) What types of data we collect</h1>
 </div>
 
 <p>
@@ -38,7 +40,7 @@
 </p>
 
 <div>
-    <h1>2.) Information security</h1>
+    <h1 class="textfont">2.) Information security</h1>
 </div>
 
 <p>
@@ -48,7 +50,7 @@
 </p>
 
 <div>
-    <h1>3.) Information about children</h1>
+    <h1 class="textfont">3.) Information about children</h1>
 </div>
 <p>
     * We do not knowingly collect, use or share personal information from children under the age of 13 without verifiable parental consent 
@@ -61,20 +63,18 @@
 </p>
 
 <div>
-    <h1>4.) ESRB Certification</h1>
+    <h1 class="textfont">4.) ESRB Certification</h1>
 </div>
 <p>
-    This privacy policy and the certification seal located on our websites that link to this policy confirms that we are a valid licensee, 
+    This privacy policy located on our websites that link to this policy confirms that we are a valid licensee, 
     and participating member, of the Entertainment Software Rating Board's Privacy Certified Program.<br />
     To help protect your privacy, we have voluntarily undertaken this privacy initiative.<br /> 
     As a licensee in this privacy certification program, we are subject to frequent audits of our websites and other enforcement and 
     accountability mechanisms administered independently by the ESRB.<br /> 
-    All of our sites containing the ESRB certification seal have been reviewed, and certified, by ESRB to meet established online information 
-    collection and use practices.<br />
 </p>
 
 <div>
-    <h1>5.) Contact information</h1>
+    <h1 class="textfont">5.) Contact information</h1>
 </div>
 
 <p> 
