--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true">Gameplay</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Character">Characters</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Character">Classes</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Pet">Pets</a>
                             </div>
@@ -102,7 +102,7 @@
             &copy; 2019 - MythicalCanines - <a asp-area="" asp-controller="Home" asp-action="Update"> News</a> / <a asp-area="" asp-controller="Home" asp-action="Privacy"> Privacy </a>
         </div>
         <div class="esbr">
-            <img src="~/Content/teen.png" alt="" />
+            <img src="~/Content/E.png" alt="" />
         </div>
         <div id="trademark">
             <p>
