--- a/MythicalCanines/Views/Home/Character.cshtml
+++ b/MythicalCanines/Views/Home/Character.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Character Page";
 }
+<link rel="stylesheet" href="~/css/PrivacySheet.css">
 
-<img class="d-block w-25" src="~/Content/Character.png" alt="" />
+<img class="d-block w-25" src="~/Content/classes.png" alt="" />
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -39,15 +40,19 @@
             <p>
                 Knight's have well-rounded base attack, having great attack, defense and can support your teammates with a shield.
             </p>
+         
             <ul class="nav nav-tabs">
                 <li class="nav-item">
                     <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                    <img class="img-fluid" src="~/gif/knightBA.gif" alt="">
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1 (Shield)</a>
+                    <img class="img-fluid" src="~/gif/knightSA1.gif" alt="" />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2 (Swordnado)</a>
+                    <img class="img-fluid" src="~/gif/KnightSA2.gif" alt="">
                 </li>
             </ul>
                 @*<div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -71,6 +76,21 @@
             <p>
                 Mage's can do strong powerful attacks and magic range. A elementalist of Fire, Ice and Lightning. You can help teammate with force fields and buff areas.
             </p>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack (Fire)</a>
+                    <img class="img-fluid" src="~/gif/MageBA.gif" />
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1 (Ice)</a>
+                    <img class="img-fluid" src="~/gif/MageSA1.gif" />
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2 (Lightning)</a>
+                    <img class="img-fluid" src="~/gif/MageSA2.gif" />
+                </li>
+            </ul>
+
         </div>
         <div class="tab-pane fade text-center" id="Thief">
             <center>
@@ -79,6 +99,19 @@
             <p>
                 Thief's super speed and stealing skills can give the party added bonus loot after they end a quest. Thief's also can use debuff's and fast attacks against opponents to gain the upper hand.
             </p>
+
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2</a>
+                </li>
+            </ul>
+
         </div>
         <div class="tab-pane fade text-center" id="Medic">
             <center>
@@ -87,6 +120,19 @@
             <p>
                 Medic's have great burst healing, regen and can revive your teammates to survive a tough quest. They can clean status elements as well.
             </p>
+
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2</a>
+                </li>
+            </ul>
+
         </div>
         @*<div class="tab-pane fade" id="dropdown1">
             <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
