--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -5,7 +5,9 @@
 
 <link rel="stylesheet" href="~/css/UpdateSheet.css">
 
-<h1>Mythical Canines Developer Updates / News</h1>
+<h1 class="textfont">
+    Mythical Canines Developer Updates / News <img class="img-fluid" src="~/Content/news.png" alt=""/>
+</h1>
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
@@ -23,13 +25,13 @@
 </ul>
 <div id="myTabContent" class="tab-content">
     <div class="tab-pane fade show active" id="Ver100">
-        <h2>4/15/2019 Ver. 1.0.0</h2>
+        <h2 class="textfont">4/15/2019 Ver. 1.0.0</h2>
         <p>
             Greetings Players! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Anyway, you the player can control a K9 and can choose one of the 4 classes. In
             this world. You fight against evil Cattens who've taken over the K9's territory.<br />
         </p>
 
-        <h3>What's New?</h3>
+        <h3 class="textfont">What's New?</h3>
 
         <p>
             - Added Beta version 1.0.0!<br />
@@ -46,13 +48,13 @@
         </p>
     </div>
     <div class="tab-pane fade" id="Ver101">
-        <h2>5/4/2019 Ver. 1.0.1</h2>
+        <h2 class="textfont">5/4/2019 Ver. 1.0.1</h2>
         <p>
             Welcome to Mythical Canines developer updates Version 1.0.1!<br />
             In this update we will be sharing some new features and a new holiday event collaboration with StarWars celebrating May the 4th!
         </p>
 
-        <h3>What's new?</h3>
+        <h3 class="textfont">What's New?</h3>
 
         <p>
             - New Event called the Galactic Strike (Available for this day only!)<br />
@@ -78,13 +80,13 @@
     </div>
     <div class="tab-pane fade" id="Ver102">
 
-        <h2>6/17/2019 Ver. 1.0.2</h2>
+        <h2 class="textfont">6/17/2019 Ver. 1.0.2</h2>
 
         <p>
             It's that time again! Welcome to Myythical Canines Version 1.0.2 a new event is on the horizon check out the new features!<br />
         </p>
 
-        <h3>What's New?</h3>
+        <h3 class="textfont">What's New?</h3>
 
         <p>
             - New event called Summer Meowcation a limited summer event (* Goes on for 6/17/2019 - 6/24/2019)<br />
@@ -108,7 +110,7 @@
         </p>
     </div>
     <div class="tab-pane fade" id="Ver103">
-        <h2>7/4/2019 Ver. 1.0.3</h2>
+        <h2 class="textfont">7/4/2019 Ver. 1.0.3</h2>
 
         <p>
             Welcome to Mythical Canines 4th annual Developers update where I give you the details on what's happening in the game!<br />
@@ -116,7 +118,7 @@
             Let's get started with the updates!<br />
         </p>
 
-        <h3>What's New?</h3>
+        <h3 class="textfont">What's New?</h3>
 
         <p>
             - Added a new event called Colorful Festivals a limited Fourth of July event (* Goes on for 7/4/2019 - 7/11/2019)<br />
