--- a/MythicalCanines/Views/Home/Character.cshtml
+++ b/MythicalCanines/Views/Home/Character.cshtml
@@ -43,7 +43,7 @@
          
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack (Slash)</a>
                     <img class="img-fluid" src="~/gif/knightBA.gif" alt="">
                 </li>
                 <li class="nav-item">
@@ -102,13 +102,16 @@
 
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack (Knife Toss)</a>
+                    <img class="img-fluid" src="~/gif/ThiefBA.gif" />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1 (Sneaky Steal)</a>
+                    <img class="img-fluid" src="~/gif/ThiefSA1.gif" />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2 (Deadly Spin)</a>
+                    <img class="img-fluid" src="~/gif/ThiefSA2.gif" />
                 </li>
             </ul>
 
@@ -123,13 +126,16 @@
 
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack</a>
+                    <a class="nav-link active" data-toggle="tab" href="#Attacks">Basic Attack (Heal)</a>
+                    <img class="img-fluid" src="~/gif/MedicBA.gif" />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial1">Special Attack 1 (Healing Buff)</a>
+                    <img class="img-fluid" src="~/gif/MedicSA1.gif" />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2</a>
+                    <a class="nav-link" data-toggle="tab" href="#KSpecial2">Special Attack 2 (Cleansing Wind)</a>
+                    <img class="img-fluid" src="~/gif/MedicSA2.gif" />
                 </li>
             </ul>
 
